chore: cross-project push and remove secrets from env example